General structure of scoping documentation

--- a/hugo/content/showcase/_index.html
+++ b/hugo/content/showcase/_index.html
@@ -5,6 +5,7 @@ type: langium
 draft: false
 description: "Showcase with example languages running in the browser"
 socialImage: "https://langium.org/assets/social-card.jpg"
+weight: 300
 ---
 <h2 class="text-center text-white text-3xl mb-12">Showcase</h2>
 <p class="text-center text-white mb-12 mx-[3rem]">Welcome to Langium's showcase! Here you can find examples of languages created using Langium, all running in the browser (no backend involved). </p>
